# triangulation_lab

./: CMakeLists.txt  README.md  info  main.cpp
src/: Controller.cpp  Controller.hpp  ConvexPolygonsLayer.cpp  ConvexPolygonsLayer.hpp  Line.hpp  OutlinePolygonsLayer.cpp  OutlinePolygonsLayer.hpp  PolygonBuilderController.cpp  PolygonBuilderController.hpp  PolygonsLayer.hpp  RenderLayer.hpp  Renderer.cpp  Renderer.hpp  ShapeAdditionLayer.cpp  ShapeAdditionLayer.hpp  TriangulationController.cpp  TriangulationController.hpp  UserPolygonsLayer.cpp  UserPolygonsLayer.hpp  ZoomController.hpp
src/Algorithms/: ConvexHull.cpp  ConvexHull.hpp  EdgesBinaryTree.cpp  EdgesBinaryTree.hpp  HalfEdgeList.cpp  HalfEdgeList.hpp  MonotonePolygon.cpp  MonotonePolygon.hpp
src/Controllers/: Controller.cpp  Controller.hpp  PolygonBuilderController.cpp  PolygonBuilderController.hpp  PolygonsGenerator.cpp  PolygonsGenerator.hpp  TriangulationController.cpp  TriangulationController.hpp  ZoomController.cpp  ZoomController.hpp
src/Elements/: ControlElement.hpp  Line.hpp  RectButton.cpp  RectButton.hpp  SpinnerControl.cpp  SpinnerControl.hpp
src/Layers/: ControllLayer.cpp  ControllLayer.hpp  ConvexPolygonsLayer.cpp  ConvexPolygonsLayer.hpp  OutlinePolygonsLayer.cpp  OutlinePolygonsLayer.hpp  PolygonsLayer.cpp  PolygonsLayer.hpp  RenderLayer.hpp  ShapeAdditionLayer.cpp  ShapeAdditionLayer.hpp
src/Utils/: Circle.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp
